manifests/base/resources/engine/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: engine
    chart: engine-1.66.39
    heritage: Helm
    release: engine
  name: engine
spec:
  ports:
  - name: engine
    port: 9076
    protocol: TCP
  selector:
    app: engine
    release: engine
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis-user-state
    chart: redis-user-state-10.0.0
    heritage: Helm
    release: engine
  name: engine-redis-user-state
spec:
  ports:
  - name: redis
    port: 6379
    targetPort: redis
  - name: redis-sentinel
    port: 26379
    targetPort: redis-sentinel
  selector:
    app: redis-user-state
    release: engine
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis-user-state
    chart: redis-user-state-10.0.0
    heritage: Helm
    release: engine
  name: engine-redis-user-state-headless
spec:
  clusterIP: None
  ports:
  - name: redis
    port: 6379
    targetPort: redis
  - name: redis-sentinel
    port: 26379
    targetPort: redis-sentinel
  selector:
    app: redis-user-state
    release: engine
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9121"
    prometheus.io/scrape: "true"
  labels:
    app: redis-user-state
    chart: redis-user-state-10.0.0
    heritage: Helm
    release: engine
  name: engine-redis-user-state-metrics
spec:
  ports:
  - name: metrics
    port: 9121
    targetPort: metrics
  selector:
    app: redis-user-state
    release: engine
  type: ClusterIP
---
