manifests/base/resources/engine/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://engine-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/(.*) /$1 break;
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.org/client-max-body-size: 500m
  labels:
    app: engine
    chart: engine-1.66.39
    heritage: Helm
    release: engine
  name: engine
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: engine
          servicePort: 9076
        path: /api/v1/apps/import
      - backend:
          serviceName: engine
          servicePort: 9076
        path: /api/v1/apps
      - backend:
          serviceName: engine
          servicePort: 9076
        path: /api/engine/openapi
      - backend:
          serviceName: engine
          servicePort: 9076
        path: /api/engine/openrpc
      - backend:
          serviceName: engine
          servicePort: 9076
        path: /api/engine/asyncapi
---
